--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "OJAS JOSHI",
+  "name": "koustav",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.19",
     "gsap": "^3.12.5",
-    "OJAS JOSHI": "file:",
+    "koustav": "file:",
     "lodash": "^4.17.21",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
